Day26/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: quickstart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: db
          image: mysql:8.0
          ports:
            - containerPort: 3306
